--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -9,11 +9,13 @@
 {% endblock %}
 
 {% block main %}
+
+{% block feed_panel %}{% endblock %}
+
 {% blocktrans %}
 <h2>Congratulations!</h2>
 <p>
-    Welcome to your new Mezzanine powered website.
-    Here are some quick links to get you started:
+    Welcome
 </p>
 <ul>
     <li><a href="/admin/">Log in to the admin interface</a></li>
