Changes to main page - with new block

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -10,7 +10,10 @@
 
 {% block main %}
 
-{% block feed_panel %}{% endblock %}
+{% block feed_panel %}
+<div class="span10 middle">
+</div>
+{% endblock %}
 
 {% blocktrans %}
 <h2>Congratulations!</h2>
