--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -93,12 +93,12 @@
     <div class="panel tree">{% page_menu "pages/menus/tree.html" %}</div>
     {% endblock %}
 </div>
-
-<div class="span10 middle">
-    {% block main %}{% endblock %}
-
 {% block feed_panel %}
-<div class="span3 right" style="float:right;">
+<div class="span7 middle">
+    {% block main %}{% endblock %}
+</div>
+
+<div class="span3 right">
     {% nevercache %}
     {% include "includes/user_panel.html" %}
     {% endnevercache %}
@@ -111,8 +111,6 @@
     </div>
 </div>
 {% endblock %}
-
-</div>
 
 </div>
 </div>
