--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -19,5 +19,10 @@
 {% editable page.title %}{{ page.title }}{% endeditable %}
 {% endblock %}
 
-{% block main %}
+{% block feed_panel %}
+<div class="span10 middle">
+{% block main %}	
+</div>
+{% endblock %}
+
 {% endblock %}
