Single pages fixed

--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -20,9 +20,8 @@
 {% endblock %}
 
 {% block feed_panel %}
-<div class="span10 middle">
-{% block main %}	
+<div class="span12 middle">
+{% block main %}
+{% endblock %}
 </div>
-{% endblock %}
-
-{% endblock %}
+{% endblock feed_panel %}
