--- a/mhnweb/static/css/bootstrap.css
+++ b/mhnweb/static/css/bootstrap.css
@@ -4604,9 +4604,11 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > li > a {
   float: none;
   padding: 10px 15px 10px;
-  color: #777777;
+  color: #ffffff /*#777777*/;
   text-decoration: none;
+  /*
   text-shadow: 0 1px 0 #ffffff;
+  */
 }
 
 .navbar .nav .dropdown-toggle .caret {
@@ -4615,17 +4617,25 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
+  /*
   color: #333333;
   text-decoration: none;
   background-color: transparent;
+  */
+  color: #ffffff /*#555555*/;
+  text-decoration: none;
+  background-color: #a3ab1e /*#e5e5e5*/;
+  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  color: #555555;
+  color: #ffffff /*#555555*/;
   text-decoration: none;
-  background-color: #e5e5e5;
+  background-color: #F47827 /*#e5e5e5*/;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
      -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
           box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
