Added News block

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load blog_tags keyword_tags i18n future %}
 
 {% block meta_title %}{% trans "Home" %}{% endblock %}
 {% block title %}{% trans "Home" %}{% endblock %}
@@ -72,6 +73,20 @@
 	</tr>
 	</table>
 	</div><!-- end main_menu -->
+
+
+{% block blog_recent_posts %}
+{% blog_recent_posts 5 as recent_posts %}
+{% if recent_posts %}
+<h3>{% trans "News" %}</h3>
+<ul class="unstyled recent-posts">
+{% for recent_post in recent_posts %}
+<li><a href="{{ recent_post.get_absolute_url }}"
+    >{{ recent_post.title }}</a></li>
+{% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
 	
 </div>
 {% endblock %}
