--- a/mhnweb/static/css/bootstrap.css
+++ b/mhnweb/static/css/bootstrap.css
@@ -231,14 +231,14 @@ body {
 }
 
 a {
-  color: #0088cc;
+  color: #000000 /*#0088cc*/;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #005580;
-  text-decoration: underline;
+  color: #999999 /*#005580*/;
+  text-decoration: none /*underline*/;
 }
 
 .img-rounded {
