--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -127,6 +127,12 @@ a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
 
 .menu_smth {
   background-color: #737914;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-bottomright: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 #main_menu {
   margin-top: 15px;
