--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -56,8 +56,9 @@
 {% endfor %}
 {% endnevercache %}
 
-
-<h1>{% block title %}{% endblock %}</h1>
+<div class="main_logo">
+<img src="{{ MEDIA_URL }}uploads/img/mhn_logo.png">
+</div>
 
 {% spaceless %}
 <div class="span10 menu_smth" style="margin-left: 0px;">
