/img folder removed

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -17,47 +17,47 @@
 	<ul>
     <li class="show">
     <a href="dap.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_01.jpg" alt="MHN DAP" />
+    <img src="{{ MEDIA_URL }}uploads/banner_01.jpg" alt="MHN DAP" />
     </a>
     </li>
     <li>
     <a href="flexpansion.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_02.jpg" alt="Flexpansion" />
+    <img src="{{ MEDIA_URL }}uploads/banner_02.jpg" alt="Flexpansion" />
     </a>
     </li>
     <li>
     <a href="itraveltrack.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_03.jpg" alt="iTravelTrack" />
+    <img src="{{ MEDIA_URL }}uploads/banner_03.jpg" alt="iTravelTrack" />
     </a>
     </li>
     <li>
     <a href="charting.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_04.jpg" alt="Charting" />
+    <img src="{{ MEDIA_URL }}uploads/banner_04.jpg" alt="Charting" />
     </a>
     </li>
     <li>
     <a href="ventures.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_05.jpg" alt="Informatics Ventures" />
+    <img src="{{ MEDIA_URL }}uploads/banner_05.jpg" alt="Informatics Ventures" />
     </a>
     </li>
     <li>
     <a href="companymot.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_06.jpg" alt="CompanyMOT" />
+    <img src="{{ MEDIA_URL }}uploads/banner_06.jpg" alt="CompanyMOT" />
     </a>
     </li>
     <li>
     <a href="medvu.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_07.jpg" alt="MedVU" />
+    <img src="{{ MEDIA_URL }}uploads/banner_07.jpg" alt="MedVU" />
     </a>
     </li>
     <li>
     <a href="islandgis.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_08.jpg" alt="IslandGIS" />
+    <img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" />
     </a>
     </li>
     <li>
     <a href="xsystem.html">
-    <img src="{{ MEDIA_URL }}uploads/img/banner_09.jpg" alt="X-System" />
+    <img src="{{ MEDIA_URL }}uploads/banner_09.jpg" alt="X-System" />
     </a>
     </li>
 	</ul>
@@ -66,10 +66,10 @@
 	<div id="main_menu">
     <table width="100%" border="0">
 	<tr>
-    <td><a href="services"><img class="img_a" src="{{ MEDIA_URL }}uploads/img/services_link.jpg" alt="Services" id="cases_block" /></a></td>
-    <td><a href="case-studies"><img class="img_a" src="{{ MEDIA_URL }}uploads/img/case_studies_link.jpg" alt="Case Studies" id="cases_block" /></a></td>
-    <td><a href="about"><img class="img_a" src="{{ MEDIA_URL }}uploads/img/about_us_link.jpg" alt="About Us" id="cases_block" /></a></td>
-    <td><a href="contact"><img class="img_a" src="{{ MEDIA_URL }}uploads/img/contact_link.jpg" alt="Contact Us" id="cases_block" /></a></td>
+    <td><a href="services"><img class="img_a" src="{{ MEDIA_URL }}uploads/services_link.jpg" alt="Services" id="cases_block" /></a></td>
+    <td><a href="case-studies"><img class="img_a" src="{{ MEDIA_URL }}uploads/case_studies_link.jpg" alt="Case Studies" id="cases_block" /></a></td>
+    <td><a href="about"><img class="img_a" src="{{ MEDIA_URL }}uploads/about_us_link.jpg" alt="About Us" id="cases_block" /></a></td>
+    <td><a href="contact"><img class="img_a" src="{{ MEDIA_URL }}uploads/contact_link.jpg" alt="Contact Us" id="cases_block" /></a></td>
 	</tr>
 	</table>
 	</div><!-- end main_menu -->
