--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -57,7 +57,7 @@
 {% endnevercache %}
 
 <div class="main_logo">
-<img src="{{ MEDIA_URL }}uploads/img/mhn_logo.png">
+<img src="{{ MEDIA_URL }}uploads/mhn_logo.png">
 </div>
 
 {% spaceless %}
@@ -72,7 +72,7 @@
 <div class="row">
 
 {% block feed_panel %}
-<img src="{{ MEDIA_URL }}uploads/img/blog.jpg" class="bloggy" alt="MHN Blog" />
+<img src="{{ MEDIA_URL }}uploads/blog.jpg" class="bloggy" alt="MHN Blog" />
 <div class="span7 middle">
     {% block main %}{% endblock %}
 </div>
