--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -72,7 +72,7 @@
 <div class="row">
 
 {% block feed_panel %}
-<img src="{{ MEDIA_URL }}uploads/blog.jpg" class="bloggy" alt="MHN Blog" />
+<img src="{{ MEDIA_URL }}uploads/blog_banner.jpg" class="bloggy" alt="MHN Blog" />
 <div class="span7 middle">
     {% block main %}{% endblock %}
 </div>
