about us link fixed

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -68,7 +68,7 @@
 	<tr>
     <td><a href="services"><img class="img_a" src="{{ MEDIA_URL }}uploads/services_link.jpg" alt="Services" id="cases_block" /></a></td>
     <td><a href="case-studies"><img class="img_a" src="{{ MEDIA_URL }}uploads/case_studies_link.jpg" alt="Case Studies" id="cases_block" /></a></td>
-    <td><a href="about"><img class="img_a" src="{{ MEDIA_URL }}uploads/about_us_link.jpg" alt="About Us" id="cases_block" /></a></td>
+    <td><a href="about-us"><img class="img_a" src="{{ MEDIA_URL }}uploads/about_us_link.jpg" alt="About Us" id="cases_block" /></a></td>
     <td><a href="contact"><img class="img_a" src="{{ MEDIA_URL }}uploads/contact_link.jpg" alt="Contact Us" id="cases_block" /></a></td>
 	</tr>
 	</table>
