banners link fixed

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -16,47 +16,47 @@
 	<div class="rotator">
 	<ul>
     <li class="show">
-    <a href="dap.html">
+    <a href="dap">
     <img src="{{ MEDIA_URL }}uploads/banner_01.jpg" alt="MHN DAP" />
     </a>
     </li>
     <li>
-    <a href="flexpansion.html">
+    <a href="flexpansion">
     <img src="{{ MEDIA_URL }}uploads/banner_02.jpg" alt="Flexpansion" />
     </a>
     </li>
     <li>
-    <a href="itraveltrack.html">
+    <a href="levima">
     <img src="{{ MEDIA_URL }}uploads/banner_03.jpg" alt="iTravelTrack" />
     </a>
     </li>
     <li>
-    <a href="charting.html">
+    <a href="charting">
     <img src="{{ MEDIA_URL }}uploads/banner_04.jpg" alt="Charting" />
     </a>
     </li>
     <li>
-    <a href="ventures.html">
+    <a href="ventures">
     <img src="{{ MEDIA_URL }}uploads/banner_05.jpg" alt="Informatics Ventures" />
     </a>
     </li>
     <li>
-    <a href="companymot.html">
+    <a href="companymot">
     <img src="{{ MEDIA_URL }}uploads/banner_06.jpg" alt="CompanyMOT" />
     </a>
     </li>
     <li>
-    <a href="medvu.html">
+    <a href="medvu">
     <img src="{{ MEDIA_URL }}uploads/banner_07.jpg" alt="MedVU" />
     </a>
     </li>
     <li>
-    <a href="islandgis.html">
+    <a href="islandgis">
     <img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" />
     </a>
     </li>
     <li>
-    <a href="xsystem.html">
+    <a href="xsystem">
     <img src="{{ MEDIA_URL }}uploads/banner_09.jpg" alt="X-System" />
     </a>
     </li>
