banners link with case-studies

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -16,47 +16,47 @@
 	<div class="rotator">
 	<ul>
     <li class="show">
-    <a href="dap">
+    <a href="case-studies/dap">
     <img src="{{ MEDIA_URL }}uploads/banner_01.jpg" alt="MHN DAP" />
     </a>
     </li>
     <li>
-    <a href="flexpansion">
+    <a href="case-studies/flexpansion">
     <img src="{{ MEDIA_URL }}uploads/banner_02.jpg" alt="Flexpansion" />
     </a>
     </li>
     <li>
-    <a href="levima">
+    <a href="case-studies/levima">
     <img src="{{ MEDIA_URL }}uploads/banner_03.jpg" alt="iTravelTrack" />
     </a>
     </li>
     <li>
-    <a href="charting">
+    <a href="case-studies/charting">
     <img src="{{ MEDIA_URL }}uploads/banner_04.jpg" alt="Charting" />
     </a>
     </li>
     <li>
-    <a href="ventures">
+    <a href="case-studies/ventures">
     <img src="{{ MEDIA_URL }}uploads/banner_05.jpg" alt="Informatics Ventures" />
     </a>
     </li>
     <li>
-    <a href="companymot">
+    <a href="case-studies/companymot">
     <img src="{{ MEDIA_URL }}uploads/banner_06.jpg" alt="CompanyMOT" />
     </a>
     </li>
     <li>
-    <a href="medvu">
+    <a href="case-studies/medvu">
     <img src="{{ MEDIA_URL }}uploads/banner_07.jpg" alt="MedVU" />
     </a>
     </li>
     <li>
-    <a href="islandgis">
+    <a href="case-studies/islandgis">
     <img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" />
     </a>
     </li>
     <li>
-    <a href="xsystem">
+    <a href="case-studies/xsystem">
     <img src="{{ MEDIA_URL }}uploads/banner_09.jpg" alt="X-System" />
     </a>
     </li>
