Informatic Ventures link fixed

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -36,7 +36,7 @@
     </a>
     </li>
     <li>
-    <a href="case-studies/ventures">
+    <a href="case-studies/informatic-ventures">
     <img src="{{ MEDIA_URL }}uploads/banner_05.jpg" alt="Informatics Ventures" />
     </a>
     </li>
