New function for expanding elements

--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -36,6 +36,7 @@
 <script src="{% static "js/bootstrap.js" %}"></script>
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
 <script src="{% static "js/banners.js" %}"></script>
+<script src="{% static "js/expander.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% endcompress %}
 <!--[if lt IE 9]>
