--- a/mhnweb/templates/pages/form.html
+++ b/mhnweb/templates/pages/form.html
@@ -21,13 +21,14 @@ $(function() {$('.middle :input:visible:enabled:first').focus();});
     {{ page_form.content|richtext_filter|safe }}
     {% endeditable %}
     {% endwith %}
+    <div class="moj_test" style="margin:0px 0px 0px 0px; float:right;">
     <form method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
         {% fields_for form %}
         <div class="form-actions">
             <input class="btn btn-primary btn-large" type="submit" value="{{ page.form.button_text }}">
         </div>
     </form>
+    </div>
 {% endif %}
-
 {% endblock %}
 
