--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -59,9 +59,9 @@ footer .separator {opacity:0.3; margin:0 10px;}
 textarea.input-xlarge {width:480px; height:150px;}
 .datefield select, .datetimefield select,
 .datefield input, .datetimefield input {width:auto; margin-right:5px;}
-.form-actions {background:rgba(220,220,220, 0.1); margin-left:-10px !important; border-top:1px solid #eee;}
+.form-actions {/*background:rgba(220,220,220, 0.1); border-top:1px solid #eee; */margin-left:-10px !important;}
 a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
-.help-inline {color:#999;}
+.help-inline {color:#999; display: inherit;}
 #account .middle form {padding-top:20px;}
 .btn-account {margin:auto 5px;}
 .non-field-errors .help-inline {padding:0; margin-bottom:5px; display:block;}
@@ -225,4 +225,10 @@ iframe:not([seamless]){
 .sliderExpanded .expandSlider{
   display:none;
   cursor:pointer;
+}
+input#id_field_1 {
+  width:480px;
+}
+input#id_field_2 {
+  width:480px;
 }
