--- a/mhnweb/templates/pages/form.html
+++ b/mhnweb/templates/pages/form.html
@@ -24,8 +24,8 @@ $(function() {$('.middle :input:visible:enabled:first').focus();});
     <div class="moj_test" style="margin:-245px 0px 0px 0px; float:right;">
     <form method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
         {% fields_for form %}
-        <div class="form-actions">
-            <input class="btn btn-primary btn-large" type="submit" value="{{ page.form.button_text }}">
+        <div class="form-actions1">
+            <input class="btn btn-primary btn" type="submit" value="{{ page.form.button_text }}">
         </div>
     </form>
     </div>
