--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 {% load mezzanine_tags keyword_tags %}
 
+{% block extra_css %}
+{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}/css/prettyPhoto.css" media="all">
+{% endblock extra_css %}
+
+{% block extra_js %}
+{{ block.super }}
+<script src="{{ STATIC_URL }}/js/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" charset="utf-8">
+  $(document).ready(function(){
+    $("a.thumbnail").prettyPhoto({
+    	social_tools:'',
+    });
+  });
+</script>
+{% endblock %}
+
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
 {% block meta_keywords %}{% metablock %}
