Rating for blog is turn off

--- a/mhnweb/templates/generic/includes/rating.html
+++ b/mhnweb/templates/generic/includes/rating.html
@@ -1,5 +1,5 @@
 {% load mezzanine_tags rating_tags i18n future %}
-
+{% comment %}
 <div class="panel rating">
 
 <p id="rating-{{ rating_object.id }}">
@@ -24,3 +24,4 @@
 <br style="clear:both">
 
 </div>
+{% endcomment %}
