--- a/mhnweb/templates/pages/form.html
+++ b/mhnweb/templates/pages/form.html
@@ -24,7 +24,7 @@ $(function() {$('.middle :input:visible:enabled:first').focus();});
     <div class="contact_form">
     <form method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
         {% fields_for form %}
-        <div class="form-actions1">
+        <div class="form-actions">
             <input class="btn btn-primary btn" type="submit" value="{{ page.form.button_text }}">
         </div>
     </form>
