--- a/mhnweb/static/css/bootstrap.css
+++ b/mhnweb/static/css/bootstrap.css
@@ -5567,7 +5567,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .thumbnail {
-  display: inline-block;
+  display: block;
   padding: 4px;
   line-height: 20px;
   border: 1px solid #ddd;
