--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -11,7 +11,7 @@
 <script src="{{ STATIC_URL }}/js/jquery.prettyPhoto.js"></script>
 <script type="text/javascript" charset="utf-8">
   $(document).ready(function(){
-    $("a.thumbnail").prettyPhoto({
+    $("a.multimedia").prettyPhoto({
     	social_tools:'',
     });
   });
