--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -13,6 +13,7 @@
   $(document).ready(function(){
     $("a.multimedia").prettyPhoto({
     	social_tools:'',
+    	allow_resize: true,
     	default_width: 640,
         default_height: 480,
     });
