--- a/mhnweb/templates/pages/page.html
+++ b/mhnweb/templates/pages/page.html
@@ -3,21 +3,20 @@
 
 {% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/prettyPhoto.css" media="all">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}skin/minimalist.css" media="all">
 {% endblock extra_css %}
 
 {% block extra_js %}
 {{ block.super }}
-<script src="{{ STATIC_URL }}/js/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" charset="utf-8">
-  $(document).ready(function(){
-    $("a.multimedia").prettyPhoto({
-    	social_tools:'',
-    	allow_resize: true,
-    	default_width: 640,
-        default_height: 480,
-    });
-  });
+<script src="{{ STATIC_URL }}/js/flowplayer.min.js"></script>
+<script>
+// run script after document is ready
+$(function () {
+ 
+   // install flowplayer to an element with CSS class "player"
+   $(".player").flowplayer({ swf: "{{ STATIC_URL }}/js/flowplayer.swf" });
+ 
+});
 </script>
 {% endblock %}
 
