--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -263,3 +263,23 @@ a.multimedia:focus {
   padding: 9px;
   color: #555555;
 }
+/* flexible width for the fancybox wrapper */
+.fancybox-wrap {
+  width: 80% !important;
+}
+ 
+ul.boxes {
+  color: #777;
+  list-style: none;
+  font-size: 18px;
+  width: 7em;
+}
+ul.boxes li {
+  cursor: pointer;
+  background: url(//media.blacktrash.org/fp/img/fp5arrow.png) 0 2px no-repeat;
+  padding-left: 24px;
+  margin: 0.5ex 0;
+}
+ul.boxes li:hover {
+  color: #111;
+}
