--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
 <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
 <link rel="stylesheet" href="{% static "css/bootstrap-responsive.css" %}">
+<link rel="stylesheet" href="{% static "css/video-js.css" %}">
 {% if LANGUAGE_BIDI %}
 <link rel="stylesheet" href="{% static "css/rtl.css" %}">
 {% endif %}
@@ -37,6 +38,7 @@
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
 <script src="{% static "js/banners.js" %}"></script>
 <script src="{% static "js/expander.js" %}"></script>
+<script src="{% static "js/video.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% endcompress %}
 <!--[if lt IE 9]>
