--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -38,6 +38,8 @@
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
 <script src="{% static "js/banners.js" %}"></script>
 <script src="{% static "js/expander.js" %}"></script>
+
+<script src="{% static "js/videojs-lightbox.js" %}"></script>
 <script src="{% static "js/video.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% endcompress %}
