class for blog details

--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -12,7 +12,7 @@ p, ul {line-height:22px; margin-top:5px; margin-bottom:15px; text-align: justify
 li {line-height:20px;}
 /* img {box-shadow:0 0 10px #bbb;} */
 .btn {cursor:pointer;}
-
+.blog_details { color: #000000;}
 
 /* Navigation */
 body {padding-top:25px;}
