--- a/mhnweb/templates/blog/blog_post_detail.html
+++ b/mhnweb/templates/blog/blog_post_detail.html
@@ -26,7 +26,7 @@
 {% block blog_post_detail_postedby %}
 {% editable blog_post.publish_date %}
 <h3>MHN Blog</h3>
-<h4>{{ blog_post.title }}</h4>
+<h3 class="blog_details">{{ blog_post.title }}</h3>
 {% block blog_post_detail_content %}
 {% editable blog_post.content %}
 {{ blog_post.content|richtext_filter|safe }}
