Added auto year to footer

--- a/mhnweb/templates/pages/menus/footer.html
+++ b/mhnweb/templates/pages/menus/footer.html
@@ -2,6 +2,6 @@
 
 {% spaceless %}
 <div class="span10 foots" style="margin-left:0px;">
-Copyright © 2011, MHN Ltd. All rights reserved
+Copyright © {% now "Y" %}, MHN Ltd. All rights reserved
 </div>
 {% endspaceless %}
