--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width">
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 <meta name="description" content="{% block meta_description %}{% endblock %}">
+<meta property="og:image" content="{% static "img/favicon.png" %}"/>
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
 <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
 
