--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width">
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 <meta name="description" content="{% block meta_description %}{% endblock %}">
-<meta property="og:image" content="{% static "img/favicon.png" %}"/>
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
 <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
 
@@ -52,6 +51,7 @@
 
 </head>
 <body id="{% block body_id %}body{% endblock %}">
+    <img itemprop="image" src="{% static "img/favicon.png" %}"></img>
 <div class="container">
 
 {% nevercache %}
