--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 <meta name="description" content="{% block meta_description %}{% endblock %}">
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
+<meta property="og:image" content="{% static "img/social_logo.png" %}" />
 <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
 
 {% ifinstalled mezzanine.blog %}
@@ -51,7 +52,6 @@
 
 </head>
 <body id="{% block body_id %}body{% endblock %}">
-    <img itemprop="image" src="{% static "img/favicon.png" %}"></img>
 <div class="container">
 
 {% nevercache %}
