--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 <meta name="description" content="{% block meta_description %}{% endblock %}">
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
+{% comment %}Image for social networks should have static URL{% endcomment %}
 <meta property="og:image" content="http://crocodile.mhnltd.co.uk:8002/static/img/social_logo.jpg" />
 <link rel="shortcut icon" href="{% static "img/favicon.png" %}">
 
