Blog author removed

--- a/mhnweb/templates/blog/includes/filter_panel.html
+++ b/mhnweb/templates/blog/includes/filter_panel.html
@@ -58,6 +58,7 @@
 {% endif %}
 {% endblock %}
 
+{% comment %} Removed autor
 {% block blog_authors %}
 {% blog_authors as authors %}
 {% if authors %}
@@ -71,6 +72,7 @@
 </ul>
 {% endif %}
 {% endblock %}
+{% endcomment %}
 
 {% block blog_feeds %}
 <h3>{% trans "Feeds" %}</h3>
