--- a/mhnweb/templates/blog/blog_post_detail.html
+++ b/mhnweb/templates/blog/blog_post_detail.html
@@ -34,10 +34,12 @@
 {% endblock %}
 
 <h6>
-    {% trans "Posted by" %}:
+    {% trans "Posted" %}:
+    {% comment %}Removed author
     {% with blog_post.user as author %}
     <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
     {% endwith %}
+    {% endcomment %}
     {% blocktrans with sometime=blog_post.publish_date|timesince %}{{ sometime }} ago{% endblocktrans %}
 </h6>
 {% endeditable %}
