--- a/mhnweb/templates/blog/blog_post_list.html
+++ b/mhnweb/templates/blog/blog_post_list.html
@@ -80,10 +80,12 @@
 {% block blog_post_list_post_metainfo %}
 {% editable blog_post.publish_date %}
 <h6>
-    {% trans "Posted by" %}:
+    {% trans "Posted" %}:
+    {% comment %}Removed author
     {% with blog_post.user as author %}
     <a href="{% url "blog_post_list_author" author %}">{{ author.get_full_name|default:author.username }}</a>
     {% endwith %}
+    {% endcomment %}
     {% with blog_post.category.all as categories %}
     {% if categories %}
     {% trans "in" %}
