--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -304,3 +304,22 @@ ul.boxes li:hover {
 .lightbox_close {
   color:#ffffff;
 }
+#share-buttons {
+  padding: 4px;
+  border: 1px solid #e0dddd;
+  background-color: #eee;
+  -moz-border-radius: 10px; -webkit-border-radius: 10px; -khtml-border-radius: 10px;  border-radius: 10px; -o-border-radius: 10px;
+}
+#share-buttons img {
+  width: 35px !important;
+  padding: 4px;
+  border:  0;
+  box-shadow: none !important;
+  display: inline;
+  vertical-align: middle;
+}
+#share-buttons, #share-buttons a {
+  font-size:  20px;
+  color: #737914!important;
+  font-weight: bold;
+}
