--- a/mhnweb/templates/blog/blog_post_detail.html
+++ b/mhnweb/templates/blog/blog_post_detail.html
@@ -88,9 +88,44 @@
 
 {% block blog_post_detail_sharebuttons %}
 {% set_short_url_for blog_post %}
+
+{% comment %}
+
+I'm leaving this for test new buttons
+
 <a class="btn small primary share-twitter" target="_blank" href="http://twitter.com/home?status={{ blog_post.short_url|urlencode }}%20{{ blog_post.title|urlencode }}">{% trans "Share on Twitter" %}</a>
 <a class="btn small primary share-facebook" target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}">{% trans "Share on Facebook" %}</a>
 <a class="btn small primary share-google" target="_blank" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}">{% trans "Share on Google+" %}</a>
+
+{% endcomment %}
+
+<!-- Share buttons -->
+<div id="share-buttons">
+Share!&nbsp
+<!-- Facebook -->
+<a target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/facebook.png" alt="Facebook" /></a>
+ 
+<!-- Twitter -->
+<a target="_blank" href="http://twitter.com/home?status={{ blog_post.short_url|urlencode }}%20{{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/twitter.png" alt="Twitter" /></a>
+ 
+<!-- Google+ -->
+<a target="_blank" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/google.png" alt="Google" /></a>
+ 
+<!-- LinkedIn -->
+<a target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/linkedin.png" alt="LinkedIn" /></a>
+
+<!-- Pinterest -->
+<a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());"><img src="{{ MEDIA_URL }}uploads/share_btn/pinterest.png" alt="Pinterest" /></a>
+
+<!-- Reddit -->
+<a target="_blank" href="http://reddit.com/submit?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/reddit.png" alt="Reddit" /></a>
+ 
+<!-- Email -->
+<a href="mailto:?Subject=Article's sharing&Body=I%20saw%20this%20and%20thought%20of%20you!%20: {{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/email.png" alt="Email" /></a>
+ 
+</div>
+
+
 {% endblock %}
 
 {% block blog_post_previous_next %}
