--- a/mhnweb/templates/blog/includes/filter_panel.html
+++ b/mhnweb/templates/blog/includes/filter_panel.html
@@ -6,7 +6,7 @@
 <h3>{% trans "Recent Posts" %}</h3>
 <ul class="unstyled recent-posts">
 {% for recent_post in recent_posts %}
-<li><a href="{{ recent_post.get_absolute_url }}"
+<li class="article-img"><a href="{{ recent_post.get_absolute_url }}"
     >{{ recent_post.title }}</a></li>
 {% endfor %}
 </ul>
