--- a/mhnweb/templates/blog/blog_post_detail.html
+++ b/mhnweb/templates/blog/blog_post_detail.html
@@ -103,25 +103,25 @@ I'm leaving this for test new buttons
 <div id="share-buttons">
 Share!&nbsp
 <!-- Facebook -->
-<a target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/facebook.png" alt="Facebook" /></a>
+<a target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/facebook.png" class="img_a" alt="Facebook" /></a>
  
 <!-- Twitter -->
-<a target="_blank" href="http://twitter.com/home?status={{ blog_post.short_url|urlencode }}%20{{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/twitter.png" alt="Twitter" /></a>
+<a target="_blank" href="http://twitter.com/home?status={{ blog_post.short_url|urlencode }}%20{{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/twitter.png" class="img_a" alt="Twitter" /></a>
  
 <!-- Google+ -->
-<a target="_blank" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/google.png" alt="Google" /></a>
+<a target="_blank" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/google.png" class="img_a" alt="Google" /></a>
  
 <!-- LinkedIn -->
-<a target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/linkedin.png" alt="LinkedIn" /></a>
+<a target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/linkedin.png" class="img_a" alt="LinkedIn" /></a>
 
 <!-- Pinterest -->
-<a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());"><img src="{{ MEDIA_URL }}uploads/share_btn/pinterest.png" alt="Pinterest" /></a>
+<a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());"><img src="{{ MEDIA_URL }}uploads/share_btn/pinterest.png" class="img_a" alt="Pinterest" /></a>
 
 <!-- Reddit -->
-<a target="_blank" href="http://reddit.com/submit?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/reddit.png" alt="Reddit" /></a>
+<a target="_blank" href="http://reddit.com/submit?url={{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/reddit.png" class="img_a" alt="Reddit" /></a>
  
 <!-- Email -->
-<a href="mailto:?Subject=Article's sharing&Body=I%20saw%20this%20and%20thought%20of%20you!%20: {{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/email.png" alt="Email" /></a>
+<a href="mailto:?Subject=Article's sharing&Body=I%20saw%20this%20and%20thought%20of%20you!%20: {{ request.build_absolute_uri }}&amp;t={{ blog_post.title|urlencode }}"><img src="{{ MEDIA_URL }}uploads/share_btn/email.png" class="img_a" alt="Email" /></a>
  
 </div>
 
