New slider for main banners

--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -38,7 +38,7 @@
 <script src="{% static "mezzanine/js/"|add:settings.JQUERY_FILENAME %}"></script>
 <script src="{% static "js/bootstrap.js" %}"></script>
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
-<script src="{% static "js/banners.js" %}"></script>
+<script src="{% static "js/slider.js" %}"></script>
 <script src="{% static "js/expander.js" %}"></script>
 
 <script src="{% static "js/videojs-lightbox.js" %}"></script>
