MedVu banner removed

--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -35,9 +35,11 @@
          <li>
             <a href="case-studies/companymot"><img src="{{ MEDIA_URL }}uploads/banner_06.jpg" alt="CompanyMOT" /></a>
          </li>
+         {% comment %} Removed
          <li>
             <a href="case-studies/medvu"><img src="{{ MEDIA_URL }}uploads/banner_07.jpg" alt="MedVU" /></a>
          </li>
+         {% endcomment %}
          <li>
             <a href="case-studies/islandgis"><img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" /></a>
          </li>
