--- a/mhnweb/templates/index.html
+++ b/mhnweb/templates/index.html
@@ -41,7 +41,10 @@
          </li>
          {% endcomment %}
          <li>
-            <a href="case-studies/islandgis"><img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" /></a>
+            <a href="case-studies/island-gis"><img src="{{ MEDIA_URL }}uploads/banner_08.jpg" alt="IslandGIS" /></a>
+         </li>
+         <li>
+            <a href="case-studies/x-system"><img src="{{ MEDIA_URL }}uploads/banner_09.jpg" alt="X-System" /></a>
          </li>
         </ul>
         <!-- end Basic jQuery Slider -->
