--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -188,6 +188,9 @@ a.btn-large, input.btn-large {width:auto; min-width:100px; margin-right:10px;}
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
 }
+.img_block {
+  float:right;
+}
 .bloggy {
   text-decoration: none;
   color: #000000;
