--- a/mhnweb/templates/base.html
+++ b/mhnweb/templates/base.html
@@ -53,6 +53,8 @@
 
 </head>
 <body id="{% block body_id %}body{% endblock %}">
+
+<div class="mainborder">
 <div class="container">
 
 {% nevercache %}
@@ -101,6 +103,7 @@
 
 </div>
 </div>
+</div>
 
 <footer>
 <div class="container">
@@ -109,6 +112,5 @@
 </footer>
 
 {% include "includes/footer_scripts.html" %}
-
 </body>
 </html>
