--- a/mhnweb/static/css/mezzanine.css
+++ b/mhnweb/static/css/mezzanine.css
@@ -4,7 +4,12 @@
   width: 960px;
   padding: 10px 20px 10px 20px;
   background-color: #ffffff;
-  border-radius: 5px;
+  -webkit-border-top-left-radius: 10px;
+  -webkit-border-bottom-right-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-bottomright: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 /* General elements */
 h3 {margin:10px 0;}
