--- a/mhnweb/static/css/bootstrap.css
+++ b/mhnweb/static/css/bootstrap.css
@@ -229,7 +229,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #f4f0e7;
+  background-color: #e7e6e2;
 }
 
 a {
